# chicky-chicky

./: .gitignore  Cargo.toml  README.md  biomes.md  biomes.norg  flake.nix  main.go  materials.md  ores.md  todo.md
blocks/: block.go  chunk.go  chunk.rs  dirt.go  grass.go  mod.rs  textures.go
blocks/types/: grass.go  sand.go  stone.go
characters/: backpack.go  characters.go  chicken.go  controllable.go
game/: game.go
input/: input.go  keyboard.go
render/: camera.go  program.go
research/: greedy_mesh_tests.xopp
scripts/: install-hooks.sh  run-tests.sh
sprite/: sprite.go
src/: camera.rs  game.rs  lib.rs  main.rs  physics.rs  sprite.rs  textures.rs  traits.rs  uniforms.rs  utils.rs
src/blocks/: block.rs  chunk.rs  mod.rs  render.rs  textures.go  textures.rs  vertices.go  vertices.rs
src/characters/: actions.go  actions.rs  backpack.go  backpack.rs  character.rs  characters.go  chicken.go  chicken.rs  controllable.go  controllable.rs  mod.rs
src/engine/: camera.rs  mod.rs  physics.rs  texture.rs  traits.rs
src/game/: game.go  game.rs
src/input/: input.go  keyboard.go  mouse.go
src/items/: food.rs  items.go  material.rs  mod.rs  resource.rs
src/maths/: aabb.go  aabb.rs  mod.rs  vectors.go  vectors.rs
src/render/: camera.go  camera.rs  mod.rs  plain_program.go  plain_program.rs  program.go  program.rs  program_attr_locations.go  program_attr_locations.rs  program_attr_names.rs  render.go  texture_program.go  texture_program.rs
src/sprite/: sprite.go
types/: types.go
utils/: vertexutils.go
world/: physical_object.go  physics.go  world.go
(+34 files in other folders)
