[package]
name = "chicky-chicky-rs"
version = "0.1.0"
authors = ["Harrison Thorne <harrison.thorne@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.35"
wasm-bindgen = "0.2.58"
rand = "0.7.3"
webgl-matrix = "0.1.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
    'Document',
    'Element',
    'HtmlCanvasElement',
    'WebGlBuffer',
    'WebGlRenderingContext',
    'WebGlProgram',
    'WebGlShader',
    'Window',
]
