[package]
name = "chicky-chicky-rs"
version = "0.1.0"
authors = ["Harrison Thorne <harrison.thorne@gmail.com>"]
edition = "2018"

[dependencies]
image = "0.22"
winit = "0.20"
wgpu = "0.5"
glsl-to-spirv = "0.1"
cgmath = "0.17"
tobj = "1.0.0"
rand = "0.7.3"
noise = "0.6.0"
futures = "0.3.4"
bytemuck = "1.2"
